--- a/Project_v2/app/src/main/res/layout/homescreen_nav_bar_header.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_nav_bar_header.xml
@@ -7,6 +7,7 @@
     android:background="@color/lucky_uiAccent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -24,23 +25,24 @@
             android:scaleType="centerCrop"
             android:src="@drawable/placeholder_profile_picture"
             app:civ_border_color="@color/lucky_uiEmphasis"
-            app:civ_border_width="6dp"
+            app:civ_border_width="6.5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView19"
-            style="@style/RoundedProfileName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="John Doe"
-            android:textAlignment="center"
-            android:textColor="@color/lucky_white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile_pic_view" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView19"
+        style="@style/RoundedProfileName"
+        android:layout_width="141dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="142dp"
+        android:text="John Doe"
+        android:textAlignment="center"
+        android:textColor="@color/lucky_white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
