--- a/Project_v2/app/src/main/res/layout/create_event_options.xml
+++ b/Project_v2/app/src/main/res/layout/create_event_options.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,174 +8,201 @@
     android:background="@color/lucky_background"
     android:padding="32dp">
 
-    <EditText
-        android:id="@+id/create_event_entrants_num_view"
-        style="@style/RoundedEditTextStyle"
-        android:layout_width="0dp"
+    <!-- Registration Deadline -->
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint="1000"
-        android:inputType="number"
-        android:padding="8dp"
-        android:text="@string/create_event_entrants_num_text"
-        android:textAlignment="textStart"
+        android:text="Registration Deadline"
+        android:textSize="20sp"
         android:textColor="@color/lucky_white"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/create_event_deadline_view"
-        style="@style/RoundedEditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint="Sep 19, 2024"
+        android:backgroundTint="#896E6E"
+        android:hint="DD-MM-YYYY"
         android:inputType="date"
         android:padding="8dp"
-        android:text="@string/create_event_deadline_text"
-        android:textAlignment="textStart"
         android:textColor="@color/lucky_white"
+        android:textColorHint="@color/lucky_grey"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@id/textView4" />
 
-    <ImageButton
-        android:layout_marginStart="-16dp"
-        android:id="@+id/event_back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
-
-    <TextView
-        android:id="@+id/event_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="New Event"
-        android:textColor="@color/lucky_white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/event_back_button"
-        app:layout_constraintStart_toEndOf="@+id/event_back_button"
-        app:layout_constraintTop_toTopOf="@+id/event_back_button" />
-
-    <TextView
-        android:id="@+id/textView4"
-        style="@style/GenericText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:text="Registration Deadline"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="73dp" />
-
+    <!-- Number of Attendees -->
     <TextView
         android:id="@+id/textView9"
-        style="@style/GenericText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/airbnbcereal_w_bk"
         android:text="Number of Attendees"
         android:textSize="20sp"
+        android:textColor="@color/lucky_white"
+        app:layout_constraintTop_toBottomOf="@id/create_event_deadline_view"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="176dp" />
+        android:layout_marginTop="24dp"/>
 
+    <EditText
+        android:id="@+id/create_event_attendees_num_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="20"
+        android:inputType="number"
+        android:padding="8dp"
+        android:textColor="@color/lucky_white"
+        android:textColorHint="@color/lucky_grey"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView9" />
+
+    <!-- Number of Entrants (Optional) -->
     <TextView
-        android:id="@+id/textView8"
-        style="@style/GenericText"
+        android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:text="Enable Geolocation"
+        android:text="Number of Entrants (Optional)"
+        android:textSize="20sp"
+        android:textColor="@color/lucky_white"
+        app:layout_constraintTop_toBottomOf="@id/create_event_attendees_num_view"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="24dp" />
+
+    <EditText
+        android:id="@+id/create_event_entrants_num_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="1000"
+        android:inputType="number"
+        android:padding="8dp"
+        android:textColor="@color/lucky_white"
+        android:textColorHint="@color/lucky_grey"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView10" />
+
+    <!-- Event Start Date -->
+    <TextView
+        android:id="@+id/textViewStartDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Event Date"
+        android:textColor="@color/lucky_white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="384dp" />
+        app:layout_constraintTop_toBottomOf="@id/create_event_entrants_num_view" />
+
+    <EditText
+        android:id="@+id/create_event_start_date"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:backgroundTint="#896E6E"
+        android:hint="DD-MM-YYYY"
+        android:inputType="date"
+        android:padding="8dp"
+        android:textColor="@color/lucky_white"
+        android:textColorHint="@color/lucky_grey"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView4" />
+
+    <!-- Ticket Price -->
+    <TextView
+        android:id="@+id/textViewTicketPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Event Ticket Price"
+        android:textColor="@color/lucky_white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create_event_start_date" />
+
+    <EditText
+        android:id="@+id/create_event_ticket_price"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="50"
+        android:inputType="number"
+        android:padding="8dp"
+        android:textColor="@color/lucky_white"
+        android:textColorHint="@color/lucky_grey"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewTicketPrice" />
+
+    <!-- Enable Geolocation -->
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enable Geolocation"
+        android:textSize="20sp"
+        android:textColor="@color/lucky_white"
+        app:layout_constraintTop_toBottomOf="@id/create_event_ticket_price"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="24dp" />
 
     <CheckBox
         android:id="@+id/create_event_geolocation_checkbox_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:buttonTint="@color/lucky_uiAccent"
-        android:checked="false"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView8" />
+        tools:layout_editor_absoluteX="300dp"
+        tools:layout_editor_absoluteY="309dp"
+        app:layout_constraintTop_toTopOf="@id/textView8"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Send Notifications -->
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send Notifications"
+        android:textSize="20sp"
+        android:textColor="@color/lucky_white"
+        app:layout_constraintTop_toBottomOf="@id/textView8"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="24dp" />
 
     <CheckBox
         android:id="@+id/create_event_notification_checkbox_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:buttonTint="@color/lucky_uiAccent"
-        android:checked="true"
-        app:layout_constraintBottom_toBottomOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+        app:layout_constraintTop_toTopOf="@id/textView7"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/textView7"
-        style="@style/GenericText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:text="Send Notifications"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="453dp" />
-
-    <TextView
-        android:id="@+id/textView10"
-        style="@style/GenericText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:text="Number of Entrants (Optional)"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="280dp" />
-
-    <EditText
-        android:id="@+id/create_event_attendees_num_view"
-        style="@style/RoundedEditTextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint="20"
-        android:inputType="number"
-        android:padding="8dp"
-        android:text="@string/create_event_attendees_num_text"
-        android:textAlignment="textStart"
-        android:textColor="@color/lucky_white"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
+    <!-- Create Event Button -->
     <Button
         android:id="@+id/create_event_button"
-        style="@style/ActiveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:drawableLeft="@drawable/createevent_icon"
         android:drawablePadding="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bd"
+        android:padding="8dp"
         android:text="Create Event"
-        android:textAlignment="center"
-        android:textAllCaps="false"
         android:textSize="20sp"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.539"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
+        app:layout_constraintTop_toBottomOf="@id/textView7"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
