--- a/Project_v2/app/src/main/res/layout/create_event.xml
+++ b/Project_v2/app/src/main/res/layout/create_event.xml
@@ -5,53 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lucky_background"
-    android:padding="24dp"
-    tools:ignore="HardcodedText, ContentDescription, AutoFill" >
-
-    <include
-        android:id="@+id/notification_top_bar"
-        layout="@layout/top_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/create_event_name_view"
-        style="@style/RoundedEditTextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint="EDM Festival"
-        android:inputType="text"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+    android:padding="32dp">
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="0dp"
+        android:id="@+id/event_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
-        android:text="Event Details"
-        android:textAlignment="textStart"
+        android:text="New Event"
         android:textColor="@color/lucky_white"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_event_name_view" />
+        app:layout_constraintBottom_toBottomOf="@+id/event_back_button"
+        app:layout_constraintStart_toEndOf="@+id/event_back_button"
+        app:layout_constraintTop_toTopOf="@+id/event_back_button" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:text="Event Name"
         android:textAlignment="textStart"
@@ -62,11 +35,54 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_event_pic_view" />
 
+    <EditText
+        android:id="@+id/create_event_name_view"
+        style="@style/RoundedEditTextStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/airbnbcereal_w_bk"
+        android:hint="@string/create_event_name_text"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/airbnbcereal_w_bd"
+        android:text="Event Details"
+        android:textAlignment="textStart"
+        android:textColor="@color/lucky_white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create_event_name_view" />
+
+    <EditText
+        android:id="@+id/create_event_details_view"
+        style="@style/RoundedEditTextStyle"
+        android:layout_width="346dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/airbnbcereal_w_bk"
+        android:hint="@string/create_event_details_text"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/airbnbcereal_w_bd"
         android:text="Event Rules"
         android:textAlignment="textStart"
@@ -77,33 +93,30 @@
         app:layout_constraintTop_toBottomOf="@+id/create_event_details_view" />
 
     <EditText
-        android:id="@+id/create_event_details_view"
-        style="@style/RoundedEditTextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint="Enjoy a night of fun and joy at this EDM Festival"
-        android:inputType="text"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <EditText
         android:id="@+id/create_event_rules_view"
         style="@style/RoundedEditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/airbnbcereal_w_bk"
-        android:hint="Only 18+ allowed"
-        android:inputType="text"
+        android:hint="@string/create_event_rules_text"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <ImageButton
+        android:layout_marginStart="-16dp"
+        android:id="@+id/event_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#00FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back" />
+
+    <!--    Hide text if event does not use geolocation-->
 
     <Button
         android:id="@+id/create_event_next_button"
@@ -120,32 +133,31 @@
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create_event_rules_view" />
 
     <ImageView
         android:id="@+id/create_event_pic_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/rounded_corners"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
         android:src="@drawable/placeholder_event"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar"
-        app:tint="#404040"
-        app:tintMode="multiply" />
+        app:layout_constraintTop_toBottomOf="@+id/event_text" />
 
     <ImageButton
         android:id="@+id/create_event_pic_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00FFFFFF"
+        android:src="@drawable/eventcreationpic_icon"
         app:layout_constraintBottom_toBottomOf="@+id/create_event_pic_view"
         app:layout_constraintEnd_toEndOf="@+id/create_event_pic_view"
         app:layout_constraintStart_toStartOf="@+id/create_event_pic_view"
-        app:layout_constraintTop_toTopOf="@+id/create_event_pic_view"
-        app:srcCompat="@drawable/eventcreationpic_icon" />
+        app:layout_constraintTop_toTopOf="@+id/create_event_pic_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
