--- a/Project_v2/app/src/main/res/layout/admin_image_list.xml
+++ b/Project_v2/app/src/main/res/layout/admin_image_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2B2B3B"
-    tools:context=".Controller.AdminImageListActivity">
+    tools:context=".View.AdminImageListActivity">
 
     <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
@@ -26,4 +26,31 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:listitem="@layout/admin_image_list" />
 
+    <!-- FrameLayout used as the item layout for each image in the RecyclerView -->
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp">
+
+        <!-- Image Thumbnail -->
+        <ImageView
+            android:id="@+id/imageThumbnail"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/placeholder_event" />
+
+        <!-- Delete Icon Overlay (Visible for delete feature) -->
+        <ImageButton
+            android:id="@+id/deleteButton"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Delete Image"
+            android:src="@drawable/ic_delete" />
+    </FrameLayout>
+
 </RelativeLayout>
+
