--- a/Project_v2/app/src/main/res/layout/homescreen_nav_bar_header.xml
+++ b/Project_v2/app/src/main/res/layout/homescreen_nav_bar_header.xml
@@ -35,8 +35,8 @@
     <TextView
         android:id="@+id/textView19"
         style="@style/RoundedProfileName"
-        android:layout_width="141dp"
-        android:layout_height="31dp"
+        android:layout_width="wrap_content"
+        android:layout_height="33dp"
         android:layout_marginTop="144dp"
         android:text="John Doe"
         android:textAlignment="center"
