--- a/Project_v2/app/src/main/res/layout/profile_overlay.xml
+++ b/Project_v2/app/src/main/res/layout/profile_overlay.xml
@@ -27,7 +27,8 @@
         android:checked="true"
         app:layout_constraintBottom_toBottomOf="@+id/textView0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView0" />
+        app:layout_constraintTop_toTopOf="@+id/textView0"
+        app:layout_constraintVertical_bias="0.38" />
 
     <TextView
         android:id="@+id/textView1"
@@ -74,5 +75,16 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/save_preferences"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="172dp"
+        android:text="Save Preferences"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
